--- a/print/print.html
+++ b/print/print.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <!-- mdl plus plus -->
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-pink.min.css">
     <!-- local -->
     <link rel="stylesheet" href="../css/style.css">
 
@@ -18,9 +17,11 @@
 </head>
 
 <body>
-    <!-- Uses a header that scrolls with the text, rather than staying
-  locked at the top -->
+    <!-- Sebisa mungkin semua element ada didalam tag div dengan 
+        class berisi mdl-layout ini -->
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+
+        <!------------------------------------------------------------ NAVBAR ------------------------------------------------------------>
         <header class="mdl-layout__header">
             <div class="mdl-layout__header-row">
                 <!-- Title -->
@@ -28,25 +29,31 @@
                     <span class="material-icons">
                         cleaning_services
                     </span>
-                    Print Laporan Harian</span>
+                    KoKeRu</span>
                 <!-- Add spacer, to align navigation to the right -->
                 <div class="mdl-layout-spacer"></div>
                 <!-- Navigation -->
                 <nav class="mdl-navigation">
-                    <!-- account button di screen kecil pindah ke sidebar-->
-                    <div class="margin-x mdl-layout--large-screen-only">
+                    <!-- account button 
+                            Di screen kecil pindah ke sidebar-->
+                    <div class="pls-margin-x mdl-layout--large-screen-only">
                         <button id="account"
                             class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
                             <span class="material-icons">account_circle</span>
-                            Doni Hermawan
+                            <span class="account-name">Doni Hermawan</span>
                         </button>
+                        <!-- list menu saat tombol di click -->
                         <ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect" for="account">
-                            <li class="mdl-menu__item">Some Action</li>
+                            <!-- menu yang hanya digunakan pada fase development -->
+                            <li class="mdl-menu__item">Ganti Akun (dev)</li>
                         </ul>
                     </div>
                 </nav>
             </div>
         </header>
+
+        <!------------------------------------------------------------ SIDEBAR ----------------------------------------------------------
+                Muncul ketika tombol menu di click -->
         <div class="mdl-layout__drawer">
             <span class="mdl-layout-title">
                 <span class="material-icons">
@@ -57,25 +64,31 @@
                 <a class="mdl-navigation__link" href="../">Dashboard</a>
                 <a class="mdl-navigation__link" href="">Print</a>
                 <!-- account button di screen besar pindah ke navbar-->
-                <div class="margin-x mdl-layout--small-screen-only">
+                <div class="pls-margin-x mdl-layout--small-screen-only">
                     <button id="account-side"
                         class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
                         <span class="material-icons">account_circle</span>
-                        Doni Hermawan
+                        <span class="account-name">Doni Hermawan</span>
                     </button>
+                    <!-- list menu saat tombol di click -->
                     <ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect" for="account-side">
-                        <li class="mdl-menu__item">Some Action</li>
+                        <!-- menu yang hanya digunakan pada fase development -->
+                        <li class="mdl-menu__item">Ganti Akun (dev)</li>
                     </ul>
                 </div>
             </nav>
         </div>
+
+        <!------------------------------------------------------------ ISI ------------------------------------------------------------>
         <main class="mdl-layout__content">
             <!-- content here -->
             <div class="page-content">
-                <section id="content-header">
-                </section>
+                <section id="content-header"></section>
+                <!-- Terdiri dari dua kolom -->
                 <section id="content-body">
                     <div class="mdl-grid">
+                        <!-- Kolom pertama berisi form untuk filter
+                        laporan harian -->
                         <div class="mdl-cell mdl-cell--2-col text-center">
                             <form action="" name="print">
                                 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
@@ -92,14 +105,18 @@
                                     </select>
                                     <label for="pilihanStatus" class="mdl-textfield__label">Pilih Status</label>
                                 </div>
+                                <button
+                                    class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">
+                                    Tampil</button>
                             </form>
-                            <button
-                                class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">
-                                Tampil</button>
+                            <!-- Membuka tab baru yang menampilkan dokumen
+                                laporan harian dan mentrigger print -->
                             <button onclick="printNewTab()"
-                                class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                                class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent pls-magin-y">
                                 Print</button>
                         </div>
+                        <!-- Kolom kedua berisi priview dari laporan
+                            harian yang akan di print -->
                         <div class="mdl-cell mdl-cell--10-col mdl-shadow--2dp text-center">
                             <div class="mdl-grid">
                                 <div id="laporanHarian"></div>
@@ -115,7 +132,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <!-- mdl -->
     <script defer src=" https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <!-- mdl plus plus -->
     <!-- local -->
     <script src="../js/print.js"></script>
 </body>
